--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href=""></a><br>   
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://cloudstackcode.github.io/How-Insurance-Leads-Can-Help-Your-Business-Grow-Insights-from-Agent-Autopilot/">https://cloudstackcode.github.io/How-Insurance-Leads-Can-Help-Your-Business-Grow-Insights-from-Agent-Autopilot/</a><br>   
+                <a target="_bLank" href="https://jeremyparkercloudstack.s3.us-east-005.backblazeb2.com/Agent+Autopilot/How+Insurance+Leads+Can+Help+Your+Business+Grow:+Insights+from+Agent+Autopilot/index.html">https://jeremyparkercloudstack.s3.us-east-005.backblazeb2.com/Agent+Autopilot/How+Insurance+Leads+Can+Help+Your+Business+Grow:+Insights+from+Agent+Autopilot/index.html</a><br>
+                <a target="_bLank" href="https://how-insurance-leads-can-hel-git-b5d2e8-cloudstackcodes-projects.vercel.app/">https://how-insurance-leads-can-hel-git-b5d2e8-cloudstackcodes-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://beautiful-dragon-4f7d22.netlify.app/">https://beautiful-dragon-4f7d22.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
